Closed Bug 730166 Opened 13 years ago Closed 13 years ago

graphical glitches with CSS transition and transform

Categories

(Core :: Layout, defect)

11 Branch
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla13
Tracking Status
firefox11 --- affected
firefox12 + verified
firefox13 --- verified

People

(Reporter: Dolske, Assigned: mattwoodrow)

References

()

Details

(Keywords: regression, Whiteboard: [qa!])

Attachments

(1 file)

http://www.dachip.com/download.html

When I hover over the album covers, they do a 3D flip effect to show the "back" side of the album. While this effect is running, I see a rapid flickering, as if we can't decide what image should be showing (z-order issue?) or that the "front" is bleeding through the "back". The bleed-thru image is correctly mirror-imaged for the effect, it just shouldn't be showing.

Using a current OS X nightly, hmm, and I already have HW acceleration disabled (layers.acceleration.disabled == false, 0 accelerated windows in about:support). Zpao's hwaccel is on, and sees the same thing.

Works correctly in Chrome.
Same problem on my Windows 7 desktop.
OS: Mac OS X → All
Hardware: x86 → All
On Linux with basic layers I also see artifacts during transition. Vertical lines left behind during the transition.
Regression window(m-c)
Cannotreproduce:
http://hg.mozilla.org/mozilla-central/rev/30161b298513
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:11.0a1) Gecko/20111117 Firefox/11.0a1 ID:20111117030939
Can reproduce:
http://hg.mozilla.org/mozilla-central/rev/e7d5dd9efeca
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:11.0a1) Gecko/20111117 Firefox/11.0a1 ID:20111117015450
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=30161b298513&tochange=e7d5dd9efeca


Regression window(m-i)
Cannotreproduce:
http://hg.mozilla.org/integration/mozilla-inbound/rev/aa05d607c95e
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:11.0a1) Gecko/20111116 Firefox/11.0a1 ID:20111116173248
Can reproduce:
http://hg.mozilla.org/integration/mozilla-inbound/rev/b201f2434265
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:11.0a1) Gecko/20111116 Firefox/11.0a1 ID:20111116194849
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=aa05d607c95e&tochange=b201f2434265

Suspected: Bug 701656
Blocks: 701656
Keywords: regression
Version: Trunk → 11 Branch
(In reply to Alice0775 White from comment #3)
> Regression window

Dang, you are _amazing_! Thanks!
Assignee: nobody → matt.woodrow
We need frames with a hidden backface to be marked as transformed so that an nsDisplayTransform is created. Otherwise we just create one for the parent frame, and never check the backface hidden property at draw time.
Attachment #602789 - Flags: review?(roc)
Can be also reproduced in this presentation http://bartaz.github.com/impress.js/#/one-more-thing on OSX, Nightly with enabled and disabled GPU acceleration.
https://hg.mozilla.org/mozilla-central/rev/f621a747531a
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla13
Sorry, is this mean, the problem will be solved in Mozilla 13?
Its sometime hard to clearly understand all you talking about, because its a strong language, but I so interested in problem solution as a web-designer.
(In reply to Dmitry from comment #12)
> Sorry, is this mean, the problem will be solved in Mozilla 13?

Yes, this bug will be fixed in Firefox 13.

Since this was a recent regression, it might also be worth it to land this fix in the Firefox 12 beta branch, if the developers think it is safe enough.  If that happens, then it will be fixed in Firefox 12.

Nominating for tracking because this is a regression in Firefox 11 and seems to be visible for various users on multiple real-world web sites.  Matt and Robert, should this be nominated for approval-mozilla-beta?
Thank you a lot. We waiting for it.)
Recent web regression in FF11, thus tracking for FF12. If we think this is low risk, let's get this nominated/approved/landed before this coming Tuesday (3/27) in time for Firefox 12 beta 3.
Comment on attachment 602789 [details] [diff] [review]
Mark frames with hidden backfaces as transformed

[Approval Request Comment]
Regression caused by (bug #): Bug 701656
User impact if declined: Broken 3d transforms with certain test cases.
Testing completed (on m-c, etc.): Has baked on m-c and m-a, changeset includes specific test.
Risk to taking this patch (and alternatives if risky): Low risk, minor change to the way 3d transforms are handled within layout.
String changes made by this patch: None
Attachment #602789 - Flags: approval-mozilla-beta?
Comment on attachment 602789 [details] [diff] [review]
Mark frames with hidden backfaces as transformed

[Triage Comment]
Approved for Beta 12. Please land before EOD tomorrow (3/27).
Attachment #602789 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Whiteboard: [qa+]
Verified as fixed on the websites from comment 0 and comment 8 on:
Mozilla/5.0 (Windows NT 5.1; rv:12.0) Gecko/20100101 Firefox/12.0
Mozilla/5.0 (X11; Linux x86_64; rv:12.0) Gecko/20100101 Firefox/12.0
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:12.0) Gecko/20100101 Firefox/12.0
20120403211507
Verified on:
Mozilla/5.0 (X11; Linux x86_64; rv:13.0) Gecko/20100101 Firefox/13.0
Mozilla/5.0 (Windows NT 6.1; rv:13.0) Gecko/20100101 Firefox/13.0
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.7; rv:13.0) Gecko/20100101 Firefox/13.0
BuildID: 20120425123149

The website used in comment 0 is not longer available. When verifying this issue on the website from comment 8, the issue seems to still reproduce when clicking on "have you noticed it's in 3D?". This test flickered almost 100% of the times I clicked on it.
So there is still a bug on trunk? I guess that should be filed as a new bug, please!
I'm pretty sure I checked the now-404-site after this landed, and it was working fine. So, definitely spin off the comment 20 / comment 8 stuff to a new bug.
Status: RESOLVED → VERIFIED
for problem in comment 8,  I filed Bug 749634
Marking as verified per the last 4 comments.
Whiteboard: [qa+] → [qa!]
Depends on: 853025
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: