Bug 730166 - Mark frames with a hidden backface as transformed. r=roc